issue70 gray fix

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="w3-container w3-padding-32 w3-grey">
+    <footer class="w3-container w3-padding-32 w3-dark-grey">
       <div class="w3-row-padding">
         <div class="w3-third">
           <h3>INFO</h3>
